добавил простое логирование в директорию с приложением